cabal-version:      3.0
name:               efftest
version:            0.1.0.0
license:            NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Act
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , http-conduit
                    , utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite efftest-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
        , efftest
        , bytestring
        , tasty

